removes non .min static files

--- a/templates/index.html
+++ b/templates/index.html
@@ -112,7 +112,7 @@ jQuery(document).ready(function(){
   </div>
 </div>
     <div class="row-fluid">
-    <div class="offset6" style="position:fixed;bottom:0px;">
+    <div class="offset2" style="bottom:0px;">
         <small>Created by <a href="http://mperlet.de">Mathias Perlet</a>
         build with 
         <a href="http://flask.pocoo.org/">Flask</a>, 
